--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello world
+<!DOCTYPE html>
+<html>
+
+   <head>
+      <title>Using Image in Webpage</title>
+   </head>
+	
+   <body>
+      <p>Simple Image Insert</p>
+      <img src = "/images/5.jpg" alt = "Test Image" />
+   </body>
+	
+</html>
