--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 <html>
 
    <head>
-      <title>Using Image in Webpage</title>
+      <title>Welcome.. Updates Coming Soon</title>
+	  <style>
+  * {
+    padding: 0;
+    margin: 0;
+  }
+  .fit { /* set relative picture size */
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .center {
+    display: block;
+    margin: auto;
+  }
+</style>
    </head>
 	
    <body>
