--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
    <head>
-      <title>Welcome.. Updates Coming Soon</title>
+      <title>Amit</title>
 	  <style>
   * {
     padding: 0;
@@ -20,7 +20,7 @@
    </head>
 	
    <body>
-      <p>Simple Image Insert</p>
+      <h1>Welcome.. Updates Coming Soon</h1>
       <img src = "/images/5.jpg" alt = "Test Image" />
    </body>
 	
